crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_few_attributes@after_fork.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::AvailableGasConfig::MaxResourceBounds(
            snforge_std::_internals::config_types::AvailableResourceBoundsConfig {
                l1_gas: 0x1, l1_data_gas: 0x2, l2_gas: 0x3,
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_available_gas'>(data.span());
        let mut data = array![];
        snforge_std::_internals::config_types::ForkConfig::Named("test").serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fork'>(data.span());
        return Default::default();
    };
}
