crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_few_attributes@after_test.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn empty_fn__snforge_internal_test_generated(mut _data: Span<felt252>) -> Span<felt252> {
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), 'Out of gas');
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), 'Out of gas',
    );
    empty_fn();
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        return;
    }
}
