crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_fuzzer@after_fuzzer.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[__fuzzer_config(runs: 123, seed: 321)]
#[__fuzzer_wrapper]
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        return;
    }
}
