crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_fuzzer_before_test@after_test.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn empty_fn__snforge_internal_test_generated(mut _data: Span<felt252>) -> Span<felt252> {
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), 'Out of gas');
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), 'Out of gas',
    );
    empty_fn__snforge_internal_fuzzer_generated();
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
#[__fuzzer_config(runs: 123, seed: 321)]
#[__fuzzer_wrapper]
fn empty_fn(f: felt252) {
    if snforge_std::_internals::is_config_run() {
        return Default::default();
    }
}
