crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_fuzzer_config_wrapper@after_available_gas.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
fn empty_fn(f: felt252) {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::AvailableGasConfig::MaxResourceBounds(
            snforge_std::_internals::config_types::AvailableResourceBoundsConfig {
                l1_gas: 0xffffffffffffffff,
                l1_data_gas: 0xffffffffffffffff,
                l2_gas: 0x3e7,
                sierra_gas: 0xffffffffffffffff,
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_available_gas'>(data.span());
        return Default::default();
    };
}
