crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_fuzzer_config_wrapper@after_fuzzer_config.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[__internal_config_statement]
fn empty_fn(f: felt252) {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::AvailableGasConfig::MaxResourceBounds(
            snforge_std::_internals::config_types::AvailableResourceBoundsConfig {
                l1_gas: 0xffffffffffffffff, l1_data_gas: 0xffffffffffffffff, l2_gas: 0x3e7,
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_available_gas'>(data.span());
        let mut data = array![];
        snforge_std::_internals::config_types::FuzzerConfig {
            seed: Option::Some(0x141), runs: Option::Some(0x7b),
        }
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fuzzer'>(data.span());
        return Default::default();
    };
}
